# T-FLEX_task

./: CMakeLists.txt  README.md  build.sh  main.cpp  primitives2D.hpp  primitives3D.hpp  run.sh  visual.cpp  visual.hpp
